--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -14,22 +15,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="404" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
                         <rect key="frame" x="8" y="10" width="80" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="LHo-Q7-DZT"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
                         <rect key="frame" x="96" y="39" width="243" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N87-Z0-xzu">
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N87-Z0-xzu">
                         <rect key="frame" x="347" y="34" width="51" height="31"/>
                         <connections>
                             <action selector="OnSwitch:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="RHS-lJ-xg5"/>
                         </connections>
                     </switch>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="hmr-LJ-OAo" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" id="6ED-ev-g7W"/>
+                    <constraint firstItem="5xP-Aa-gwq" firstAttribute="leading" secondItem="hmr-LJ-OAo" secondAttribute="trailing" constant="8" symbolic="YES" id="6RQ-FL-3CF"/>
+                    <constraint firstItem="N87-Z0-xzu" firstAttribute="trailing" secondItem="nMp-EM-EIu" secondAttribute="trailingMargin" id="Ei4-dX-si4"/>
+                    <constraint firstItem="hmr-LJ-OAo" firstAttribute="leading" secondItem="nMp-EM-EIu" secondAttribute="leadingMargin" id="dsT-mf-LXh"/>
+                    <constraint firstItem="N87-Z0-xzu" firstAttribute="leading" secondItem="5xP-Aa-gwq" secondAttribute="trailing" constant="8" symbolic="YES" id="eIO-vc-Qz1"/>
+                    <constraint firstItem="5xP-Aa-gwq" firstAttribute="centerY" secondItem="N87-Z0-xzu" secondAttribute="centerY" id="oIH-dk-AGM"/>
+                    <constraint firstItem="hmr-LJ-OAo" firstAttribute="centerY" secondItem="5xP-Aa-gwq" secondAttribute="centerY" id="vD4-ga-ofG"/>
+                    <constraint firstItem="hmr-LJ-OAo" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="2" id="vJt-tM-gC6"/>
+                </constraints>
             </tableViewCellContentView>
             <accessibility key="accessibilityConfiguration" identifier="SimpleTableCell"/>
             <connections>
